<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MinesWeeper</string>
    <string name="game_name">MinesWeeper</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="new_game">New Game</string>
    <string name="new_game_set">Choose game difficulty</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="custom">Custom</string>
    <string name="expert">Expert</string>
    <string name="master">Master</string>
    <string name="size_24">24 X 24</string>
    <string name="size_16">16 X 16</string>
    <string name="size_10">10 X 10</string>
    <string name="size_50">50 X 50</string>
    <string name="custom_board_size">Custom board size</string>
    <string name="x">X</string>
    <string name="number_of_bombs">Number of Bombs</string>
    <string name="play">Play</string>
    <string name="reset">Reset</string>
</resources>