<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".NewGameSettings">

    <TextView
        android:id="@+id/nameOfGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:fontFamily="serif-monospace"
        android:text="@string/new_game_set"
        android:textAlignment="textStart"
        android:textColor="?colorOnPrimary"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@color/inv"
        android:onClick="toMainActivity"
        android:padding="10dp"
        app:srcCompat="@drawable/arrow_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nameOfGame"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/settings2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:fontFamily="serif-monospace"
                android:minWidth="1000dp"
                android:onClick="toBeginnerMode"
                android:drawableTop="@drawable/easy"
                android:text="@string/size_10"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <Button
                android:id="@+id/settings1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:drawableTop="@drawable/medium"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:fontFamily="serif-monospace"
                android:minWidth="1000dp"
                android:onClick="toIntermMode"
                android:text="@string/size_16"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/settings4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40sp"
                android:layout_marginTop="0dp"
                android:drawableTop="@drawable/hard"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:fontFamily="serif-monospace"
                android:onClick="toExpertMode"
                android:text="@string/size_24"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/settings3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/master"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="0.5"
                android:fontFamily="serif-monospace"
                android:onClick="toCustomBoard"
                android:text="@string/custom"
                android:textAlignment="center"
                android:textAllCaps="false" />
        </TableRow>
    </TableLayout>


</RelativeLayout>