<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Statistics">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/inv"
        android:onClick="toMainActivity"
        android:padding="10dp"
        app:srcCompat="@drawable/arrow_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="26sp"
        android:fontFamily="serif-monospace"
        android:text="@string/statistics"
        android:textAlignment="textStart"
        android:textColor="?colorOnPrimary"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/statistic"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_weight="1"
            app:cardBackgroundColor="?colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="serif-monospace"
                android:text="@string/beginner"
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:fontFamily="serif-monospace"
                android:text=""
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardBackgroundColor="?colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="serif-monospace"
                android:text="@string/intermediate"
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:fontFamily="serif-monospace"
                android:text=""
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardBackgroundColor="?colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="serif-monospace"
                android:text="@string/expert"
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:fontFamily="serif-monospace"
                android:text=""
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card4"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardBackgroundColor="?colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="serif-monospace"
                android:text="@string/custom"
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:fontFamily="serif-monospace"
                android:text=""
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:fontFamily="serif-monospace"
            android:text="@string/reset"
            android:textColor="?colorOnPrimary"
            android:textSize="30sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>